        - manual_input device added
        - Datapacket accepts datapacket is input
        - generic_sensor update
        - redvypr.get_packetids() and RedvyprDevice.get_packetids() implemented
        - several bug fixes in redvypr_addressWidget.py, it accepts now packetid and can treat several items using regular expressions.
- 0.9.0:
        - autostart bug
        - autocalibration in calibration device
        - initdevicewidget parameter bug fixed
- 0.8.9:
        - renamed ``devicedisplaywidget.update`` in ``.update_data``
        - redvypr: devicedict cleaned, removed 'dataout', refactored 'gui' and 'guiqueue' into 'guiqueues'
- 0.8.8:
        - datastreamsWidget implemented
        - bugs in RedvyprAddress with packetid defined or an update of datakey
        - added polynomial fit to calibration.py and improved several small things
        - improved ``Device.get_metadata_datakey``, it can now handle "eval" RedvyprAddresses
        - cleanup of XYPlotWidget
- 0.8.7:
        - introduced packetid in datapackets
        - Datapackets work now with ``Datapacket[RedvyprAddress]``
        - bug fixes in serial device
- 0.8.6:
        - generic_sensor and sensor definitions strongly improved
        - RedvyprAddress is working as a pydantic datatype
- 0.8.5:
        - bug fixes in serial
- 0.8.4:
        - serial widget improved
        - generic_sensor added
        - configwidget strongly improved
        - small bugs with device paths fixed
- 0.8.3:
        - XYPlot working
        - configwidget editable bug removed
        - XYPlot with feature of plot last_N_points
        - redvypr device save config bug fixed (custom_config instead of config)
        - several small bugs
- 0.8.2:
        - qtawesome icons for the devices including configuration
- 0.8.1:
        - API renaming, changed class names to CapWord style according to PEP08, cleanup of configuration
- 0.8.0:
        - complete rewrite of configuration for a fill pydantic version
- 0.7.9: