@@ -3,4 +3,5 @@ from . import plot_widgets
 from . import XYplotWidget
 from . import XYPlot
 from . import rawdatadisp
+from . import PcolorPlot
 redvypr_devicemodule = True
